show no suggestions for one word query

--- a/assets/templates/partials/sort.tmpl
+++ b/assets/templates/partials/sort.tmpl
@@ -21,12 +21,14 @@
                     {{ if .Data.Response.Suggestions}}
                         Did you mean <a class="underline-link" href="/search?q={{ index .Data.Response.Suggestions 0 }}">{{ index .Data.Response.Suggestions 0 }}</a>?
                     {{ else }}
-                        Try
                         {{ $len := len .Data.Response.AdditionalSuggestions}}
-                        {{ range $i, $suggestion := .Data.Response.AdditionalSuggestions}}
-                            <a class="underline-link" href="/search?q={{ $suggestion }}">{{ $suggestion }}</a> 
-                            {{ if notLastItem $len $i }}
-                            or
+                        {{ if gt $len 0 }}
+                            Try
+                            {{ range $i, $suggestion := .Data.Response.AdditionalSuggestions}}
+                                <a class="underline-link" href="/search?q={{ $suggestion }}">{{ $suggestion }}</a>
+                                {{ if notLastItem $len $i }}
+                                or
+                                {{ end }}
                             {{ end }}
                         {{ end }}
                     {{ end }}
