--- a/assets/templates/partials/results.tmpl
+++ b/assets/templates/partials/results.tmpl
@@ -2,6 +2,8 @@
 {{ $currentPage := .Data.Pagination.CurrentPage }}
 {{ $itemsPerPage := .Data.Pagination.Limit }}
 {{ $totalSearchPosition := multiply (subtract $currentPage 1) $itemsPerPage }}
+{{ $filter := .Data.Filter }}
+{{ $response := .Data.Response }}
 <div id="results" class="results">    
     {{ if ne .Data.Response.Count 0 }}
         <div class="search-results ">
@@ -23,7 +25,14 @@
                             </a>
                         </h3>
                         <p class="search-results__meta font-size--16">
-                            {{ .Type}}
+                        {{ $type := .Type }}
+                            {{ range $category := $response.Categories }}
+                                {{ range $content := $category.ContentTypes }}
+                                    {{ if eq $type $content.Type }}
+                                        {{ localise $content.LocaliseKeyName $lang 4 }}
+                                    {{ end }}
+                                {{end}}
+                             {{end}}
                             |
                             {{ localise "ReleasedOn" $lang 1 }} {{dateFormat .Description.ReleaseDate}}
                         </p>
