--- a/assets/templates/partials/filter.tmpl
+++ b/assets/templates/partials/filter.tmpl
@@ -2,63 +2,77 @@
 {{ $response := .Data.Response }}
 {{ $lang := .Language }}
 <form id="form" class="js-auto-submit__form">
-    <div class="col col--md-12 col--lg-18 margin-bottom">
-        <div class="margin-bottom-md--2 flush-col js-mobile-filters">
-         
-            <div class="background--gallery padding-top-md--2 padding-right-md--1 padding-bottom-md--4 padding-left-sm--1 padding-left-md--1 flush js-mobile-filters__title">
-                <h3 class="inline-block flush font-size--18">{{ localise "FilterResults" $lang 4 }}</h3>
-                <a href="/search{{ if .Data.Query }}?q={{ .Data.Query}}{{end}}" id="clear-search" class="float-right font-size--18">{{ localise "ClearAll" $lang 1 }}</a>
-            </div>
 
-            <div class="background--mercury border-top--iron-md padding-top-sm--2 padding-top-md--1 padding-right-sm--1 padding-right-md--1 padding-bottom-sm--2 padding-bottom-md--2 padding-left-sm--1 padding-left-md--1 js-mobile-filters__contents">
-                <fieldset class="ons-fieldset">
-                    <legend class="ons-fieldset__legend">
-                        Content type
-                    </legend>
-                    <p class="ons-checkboxes__label">Show only:</p>
-                    
-                    {{ range $index, $category := $response.Categories }}
-                        <div class="ons-checkboxes__items">
+    <div class="margin-bottom-md--2 flush-col js-mobile-filters">
+
+        {{/*            <div class="background--gallery padding-top-md--2 padding-right-md--1 padding-bottom-md--4 padding-left-sm--1 padding-left-md--1 flush js-mobile-filters__title">*/}}
+        {{/*                <h3 class="inline-block flush font-size--18">{{ localise "FilterResults" $lang 4 }}</h3>*/}}
+        {{/*                <a href="/search{{ if .Data.Query }}?q={{ .Data.Query}}{{end}}" id="clear-search"*/}}
+        {{/*                   class="float-right font-size--18">{{ localise "ClearAll" $lang 1 }}</a>*/}}
+        {{/*            </div>*/}}
+
+        <div class="background--mercury border-top--iron-md padding-top-sm--2 padding-top-md--1 padding-right-sm--1 padding-right-md--1 padding-bottom-sm--2 padding-bottom-md--2 padding-left-sm--1 padding-left-md--1 js-mobile-filters__contents">
+            <fieldset class="ons-fieldset">
+                <legend class="ons-fieldset__legend">
+                    Content type
+                </legend>
+                <p class="ons-checkboxes__label">Show only:</p>
+
+                {{ range $index, $category := $response.Categories }}
+                    <div class="ons-checkboxes__items">
                             <span class="ons-checkboxes__item ons-checkboxes__item--no-border">
                                 <span class="ons-checkbox ons-checkbox--no-border">
-                                    <input type="checkbox" id="group-{{ $index }}" class="ons-checkbox__input ons-js-checkbox  ons-js-other ons-js-select-all-children" value="publications" aria-controls="group-{{ $index }}-other-wrap" aria-haspopup="true">          
-                                    <label class="ons-checkbox__label" for="group-{{ $index }}" id="group-{{ $index }}-label">
-                                        {{ localise $category.LocaliseKeyName $lang 4 }}
+                                    <input type="checkbox" id="group-{{ $index }}"
+                                           class="js-auto-submit__input ons-checkbox__input ons-js-checkbox ons-js-other ons-js-select-all-children"
+                                           value="publications" aria-controls="group-{{ $index }}-other-wrap"
+                                           aria-haspopup="true">
+                                    <label class="ons-checkbox__label" for="group-{{ $index }}"
+                                           id="group-{{ $index }}-label">
+                                        {{ localise $category.LocaliseKeyName $lang 4 }} ({{ $category.Count }})
                                     </label>
                                     <span class="ons-checkbox__other" id="group-{{ $index }}-other-wrap">
                                         <fieldset class="ons-fieldset ons-js-other-fieldset">
-                                            <div class="ons-checkboxes__items">
+                                            {{ range $contentIndex, $content := $category.ContentTypes }}
+                                                <div class="ons-checkboxes__items">
                                                 <span class="ons-checkboxes__item ons-checkboxes__item--no-border">
                                                     <span class="ons-checkbox ons-checkbox--no-border">
-                                                        <input type="checkbox" id="datasets" class="ons-checkbox__input ons-js-checkbox " value="datasets">
-                                                        <label class="ons-checkbox__label" for="datasets" id="datasets-label">
-                                                            Datasets (100)
+                                                        {{ $id := (print "checkout-" $content.Type) }}
+                                                        <input id="{{ $id }}"
+                                                               class="js-auto-submit__input ons-checkbox__input ons-js-checkbox"
+                                                               type="checkbox" name="filter"
+                                                               value="{{ $content.Type }} {{ range $filter }}{{ if eq . $content.Type }}checked{{end}}{{end}}"/>
+                                                        <label class="ons-checkbox__label" for="{{ $id }}"
+                                                               id="{{ $id }}-label">
+                                                            {{ localise $content.LocaliseKeyName $lang 4 }} ({{ $content.Count }})
                                                         </label>
                                                     </span>
                                                 </span>
                                             </div>
+                                            {{ end }}
                                         </fieldset>
                                     </span>
-                                    <br />
                                 </span>
                             </span>
-                        </div>
-                    {{ end }}
+                    </div>
+                {{ end }}
 
-                </fieldset>            
-                <button type="submit" class="btn btn--primary btn--thick margin-top-sm--2 margin-top-md--2 js-submit-button">Filter</button>
-            </div>
+            </fieldset>
+            <button type="submit"
+                    class="btn btn--primary btn--thick margin-top-sm--2 margin-top-md--2 js-submit-button">Filter
+            </button>
         </div>
     </div>
     <div class="tiles__item tiles__item--nav-type flush-col hide--sm print--hide">
         <h3 class="tiles__title-h3 tiles__title-h3--nav">Need an earlier release?</h3>
         <div class="tiles__content tiles__content--nav">
             <p>
-                We moved them to <a href="http://webarchive.nationalarchives.gov.uk/20160105160709/http://www.ons.gov.uk/ons/index.html">The National Archives</a> website, to keep this website as responsive as possible.
+                We moved them to <a
+                        href="http://webarchive.nationalarchives.gov.uk/20160105160709/http://www.ons.gov.uk/ons/index.html">The
+                    National Archives</a> website, to keep this website as responsive as possible.
             </p>
             <p>
                 <strong>Please note: </strong>all historical data is still on this website.
             </p>
         </div>
     </div>
-</form> 
+</form>
