--- a/assets/templates/partials/filter_old.tmpl
+++ b/assets/templates/partials/filter_old.tmpl
@@ -2,48 +2,36 @@
 {{ $response := .Data.Response }}
 {{ $lang := .Language }}
 <form id="form" class="js-auto-submit__form">
-
     <div class="col col--md-12 col--lg-18 margin-bottom">
         <div class="margin-bottom-md--2 flush-col js-mobile-filters">
+            
             <div class="background--gallery padding-top-md--2 padding-right-md--1 padding-bottom-md--4 padding-left-sm--1 padding-left-md--1 flush js-mobile-filters__title">
-                <h3 class="inline-block flush font-size--18">{{ localise "FilterResults" $lang 4 }}</h3>
-                <a href="/search{{ if .Data.Query }}?q={{ .Data.Query}}{{end}}" id="clear-search" class="float-right font-size--18">{{ localise "ClearAll" $lang 1 }}</a>
+                <h3 class="inline-block flush">{{ localise "RefineResults" $lang 4 }}</h3>
+                <a href="/search{{ if .Data.Query }}?q={{ .Data.Query}}{{end}}" id="clear-search" class="float-right">{{ localise "ClearAll" $lang 1 }}</a>
             </div>
+            
             <div class="background--mercury border-top--iron-md padding-top-sm--2 padding-top-md--1 padding-right-sm--1 padding-right-md--1 padding-bottom-sm--2 padding-bottom-md--2 padding-left-sm--1 padding-left-md--1 js-mobile-filters__contents">
                 <div class="filters js-filters">
                     <h4 class="filters__title">{{ localise "ContentTypesToShow" $lang 4 }}</h4>
-
-                    {{ range $index, $category := $response.Categories }}
-                      <div id="accordion-{{ $index }}" class="ons-collapsible ons-js-collapsible ons-collapsible--accordion" data-btn-close="Hide" data-group="accordion">
-                        <div class="ons-collapsible__heading ons-js-collapsible-heading">
-                            <div class="ons-collapsible__controls">
-                                <h2 class="ons-collapsible__title">{{ localise $category.LocaliseKeyName $lang 4 }}</h2>
-                                <span class="ons-collapsible__icon">
-                                    <svg class="ons-svg-icon " viewBox="0 0 8 13" xmlns="http://www.w3.org/2000/svg" focusable="false" fill="currentColor">
-                                        <path d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z" transform="translate(-5.02 -1.59)" />
-                                    </svg>
-                                </span>
+                    {{ range $category := $response.Categories }}
+                        <fieldset class="filters__fieldset">
+                            <legend class="filters__sub-title">{{ localise $category.LocaliseKeyName $lang 4 }}</legend>
+                            <div class="js-checkbox-container">
+                                <ul class="list--neutral margin-top--0 margin-bottom--0">
+                                {{ range $content := $category.ContentTypes }}    
+                                    <li class="filters__item">
+                                        <div class="filters__field">
+                                            {{ $id := (print "checkout-" $content.Type) }}
+                                            <input id="{{ $id }}" class="js-auto-submit__input" type="checkbox" name="filter" value={{ $content.Type }} {{ range $filter }}{{ if eq . $content.Type }}checked{{end}}{{end}}>
+                                            <label for="{{ $id }}">
+                                            {{ localise $content.LocaliseKeyName $lang 4 }} ({{ $content.Count }})
+                                            </label>
+                                        </div>
+                                    </li>
+                                {{ end }}
+                                </ul>
                             </div>
-                        </div>
-                    </div>
-                                <div class="js-checkbox-container">
-                                    <ul class="list--neutral margin-top--0 margin-bottom--0">
-                                    {{ range $content := $category.ContentTypes }}    
-                                        <li class="filters__item">
-                                            <div class="filters__field">
-                                                {{ $id := (print "checkout-" $content.Type) }}
-                                                <input id="{{ $id }}" class="js-auto-submit__input" type="checkbox" name="filter" value={{ $content.Type }} {{ range $filter }}{{ if eq . $content.Type }}checked{{end}}{{end}}>
-                                                <label for="{{ $id }}">
-                                                {{ localise $content.LocaliseKeyName $lang 4 }} ({{ $content.Count }})
-                                                </label>
-                                            </div>
-                                        </li>
-                                    {{ end }}
-                                    </ul>
-                                </div>
-      
-                                </div>
-
+                        </fieldset>
                     {{ end }}
                 </div>
                 <button type="submit" class="btn btn--primary btn--thick margin-top-sm--2 margin-top-md--2 js-submit-button">Filter</button>
