--- a/assets/templates/partials/summary.tmpl
+++ b/assets/templates/partials/summary.tmpl
@@ -1,5 +1,6 @@
 {{ $lang := .Language }}
-<div class="col search-summary">
+
+<div class="search-summary">
     <div aria-live="polite">
         <span class="search-summary__count">{{ .Data.Response.Count}}
             {{ if and (.Data.Filter) (not .Data.Response.Suggestions) }}
@@ -16,7 +17,8 @@
         <span class="search-summary__query">{{ .Data.Query}}</span>
         <span class="search-summary__suggestion">
             {{ if .Data.Response.Suggestions}}
-                Did you mean <a class="underline-link" href="/search?q={{ index .Data.Response.Suggestions 0 }}">{{ index .Data.Response.Suggestions 0 }}</a>?
+                Did you mean <a class="underline-link"
+                                href="/search?q={{ index .Data.Response.Suggestions 0 }}">{{ index .Data.Response.Suggestions 0 }}</a>?
             {{ else }}
                 {{ $len := len .Data.Response.AdditionalSuggestions}}
                 {{ if gt $len 0 }}
@@ -24,7 +26,7 @@
                     {{ range $i, $suggestion := .Data.Response.AdditionalSuggestions}}
                         <a class="underline-link" href="/search?q={{ $suggestion }}">{{ $suggestion }}</a>
                         {{ if notLastItem $len $i }}
-                        or
+                            or
                         {{ end }}
                     {{ end }}
                 {{ end }}
