--- a/assets/templates/partials/filter_old.tmpl
+++ b/assets/templates/partials/filter_old.tmpl
@@ -1,7 +1,7 @@
 {{ $filter := .Data.Filter }}
 {{ $response := .Data.Response }}
 {{ $lang := .Language }}
-<form id="form" class="js-auto-submit__form">
+<form id="form" class="js-auto-submit__form" action="">
     <div class="col col--md-12 col--lg-18 margin-bottom">
         <div class="margin-bottom-md--2 flush-col js-mobile-filters">
             
