--- a/assets/templates/partials/filter.tmpl
+++ b/assets/templates/partials/filter.tmpl
@@ -1,7 +1,16 @@
+package main
+
+import (
+    "strings"
+)
+
 {{ $filter := .Data.Filter }}
 {{ $response := .Data.Response }}
+{{ $query := .Data.Query }}
 {{ $lang := .Language }}
-<form id="form" class="js-auto-submit__form">
+<form id="form" class="js-auto-submit__form" action="/search" method="get">
+    <input type="hidden" name="q" value="{{ $query }}"/>
+    <input type="hidden" name="sortBy" value="relevance"/>
 
     <div class="margin-bottom-md--2 flush-col js-mobile-filters">
 
@@ -11,20 +20,22 @@
         {{/*                   class="float-right font-size--18">{{ localise "ClearAll" $lang 1 }}</a>*/}}
         {{/*            </div>*/}}
 
+
+
         <div class="background--mercury border-top--iron-md padding-top-sm--2 padding-top-md--1 padding-right-sm--1 padding-right-md--1 padding-bottom-sm--2 padding-bottom-md--2 padding-left-sm--1 padding-left-md--1 js-mobile-filters__contents">
             <fieldset class="ons-fieldset">
                 <legend class="ons-fieldset__legend">
                     Content type
                 </legend>
                 <p class="ons-checkboxes__label">Show only:</p>
-
+{{ $filter }}
                 {{ range $index, $category := $response.Categories }}
-                    <div class="ons-checkboxes__items">
+                <div class="ons-checkboxes__items">
                             <span class="ons-checkboxes__item ons-checkboxes__item--no-border">
                                 <span class="ons-checkbox ons-checkbox--no-border">
                                     <input type="checkbox" id="group-{{ $index }}"
-                                           class="js-auto-submit__input ons-checkbox__input ons-js-checkbox ons-js-other ons-js-select-all-children"
-                                           value="publications" aria-controls="group-{{ $index }}-other-wrap"
+                                           class="js-auto-submit__input ons-checkbox__input ons-js-checkbox {{if contains $filter "bullitins"}} ons-js-select-all-children{{end}}"
+                                           value="{{ $category }}" aria-controls="group-{{ $index }}-other-wrap"
                                            aria-haspopup="true">
                                     <label class="ons-checkbox__label" for="group-{{ $index }}"
                                            id="group-{{ $index }}-label">
@@ -36,11 +47,13 @@
                                                 <div class="ons-checkboxes__items">
                                                 <span class="ons-checkboxes__item ons-checkboxes__item--no-border">
                                                     <span class="ons-checkbox ons-checkbox--no-border">
-                                                        {{ $id := (print "checkout-" $content.Type) }}
+                                                        {{ $id := (print $content.Type) }}
                                                         <input id="{{ $id }}"
                                                                class="js-auto-submit__input ons-checkbox__input ons-js-checkbox"
                                                                type="checkbox" name="filter"
-                                                               value="{{ $content.Type }} {{ range $filter }}{{ if eq . $content.Type }}checked{{end}}{{end}}"/>
+                                                               {{ range $filter }}{{ if eq . $content.Type }}checked{{end}}{{end}}
+                                                               value="{{ $id }}"/>
+
                                                         <label class="ons-checkbox__label" for="{{ $id }}"
                                                                id="{{ $id }}-label">
                                                             {{ localise $content.LocaliseKeyName $lang 4 }} ({{ $content.Count }})
@@ -53,7 +66,7 @@
                                     </span>
                                 </span>
                             </span>
-                    </div>
+                </div>
                 {{ end }}
 
             </fieldset>
