--- a/assets/templates/partials/filter.tmpl
+++ b/assets/templates/partials/filter.tmpl
@@ -32,7 +32,7 @@
                                            id="group-{{ $index }}-label">
                                         {{ localise $category.LocaliseKeyName $lang 4 }} ({{ $category.Count }})
                                     </label>
-                                    <span class="ons-checkbox__other ons-checkbox__other--open" id="group-{{ $index }}-other-wrap">
+                                    <span class="ons-checkbox__other {{ range $content := $category.ContentTypes }}{{ range $filter }}{{ if eq . $content.Type }}ons-checkbox__other--open{{end}}{{end}}{{end}}" id="group-{{ $index }}-other-wrap">
                                         <fieldset class="ons-fieldset ons-js-other-fieldset">
                                             {{ range $contentIndex, $content := $category.ContentTypes }}
                                                 <div class="ons-checkboxes__items">
