fixed search pagination type

--- a/assets/templates/search.tmpl
+++ b/assets/templates/search.tmpl
@@ -25,7 +25,7 @@
         {{ template "partials/department" . }}
         {{ template "partials/results" . }}
       </div>
-      <div class="search__pagintion">
+      <div class="search__pagination">
         {{ template "partials/pagination" . }}
       </div>
     </section>
