--- a/assets/templates/partials/filter.tmpl
+++ b/assets/templates/partials/filter.tmpl
@@ -1,10 +1,11 @@
-{{ $filter := .Data.Filter }}
+{{ $filters := .Data.Filters }}
 {{ $response := .Data.Response }}
 {{ $query := .Data.Query }}
+{{ $sort := .Data.Sort.Query }}
 {{ $lang := .Language }}
-<form id="filterForm" class="js-auto-submit__form" action="/search" method="get">
+<form id="filterForm" class="js-auto-submit__form" method="get">
     <input type="hidden" name="q" value="{{ $query }}"/>
-    <input type="hidden" name="sortBy" value="relevance"/>
+    <input type="hidden" name="sort" value="{{$sort}}"/>
     <div class="margin-bottom-md--2 flush-col js-mobile-filters">
         <div class="background--mercury border-top--iron-md padding-top-sm--2 padding-top-md--1 padding-right-sm--1 padding-right-md--1 padding-bottom-sm--2 padding-bottom-md--2 padding-left-sm--1 padding-left-md--1 js-mobile-filters__contents">
             <fieldset class="ons-fieldset">
@@ -14,44 +15,41 @@
                 <a href="/search{{ if .Data.Query }}?q={{ .Data.Query}}{{end}}" id="clear-search"
                    class="float-right font-size--18">{{ localise "ClearAll" $lang 1 }}</a>
                 <p class="ons-checkboxes__label">Show only:</p>
-                {{ range $index, $category := $response.Categories }}
+                {{ range $index, $topFilter := $filters}}
                     <div class="ons-checkboxes__items">
                             <span class="ons-checkboxes__item ons-checkboxes__item--no-border">
                                 <span class="ons-checkbox ons-checkbox--no-border category-filter">
                                     <input type="checkbox" id="group-{{ $index }}"
-                                           class="js-auto-submit__input ons-checkbox__input ons-js-checkbox"
-                                           value="{{ $category }}" categoryChildren="{{ range $contentIndex, $content := $category.ContentTypes }}{{$content.Group}}{{","}}{{end}}" aria-controls="group-{{ $index }}-other-wrap"
-                                           aria-haspopup="true"
-                                              {{ range $content := $category.ContentTypes}}
-                                                  {{if stringArrayContains $content.Group $filter }}
-                                                      checked
-                                                  {{end}}
-                                              {{end}}
-                                           >
-                                    <label class="ons-checkbox__label" for="group-{{ $index }}"
-                                           id="group-{{ $index }}-label">
-                                        {{ localise $category.LocaliseKeyName $lang 4 }} ({{ $category.Count }})
+                                        class="js-auto-submit__input ons-checkbox__input ons-js-checkbox"
+                                        value="{{ print $topFilter.FilterKey }}" categoryChildren="{{ print $topFilter.FilterKey }}" aria-controls="group-{{ $index }}-other-wrap"
+                                        aria-haspopup="true"
+                                        {{if $topFilter.IsChecked }}
+                                            checked
+                                        {{end}}
+                                    >
+                                    <label class="ons-checkbox__label" for="group-{{ $index }}" id="group-{{ $index }}-label">
+                                        {{ localise $topFilter.LocaliseKeyName $lang 4 }} ({{ $topFilter.NumberOfResults }})
                                     </label>
-                                    <span class="ons-checkbox__other {{ range $content := $category.ContentTypes }}{{ range $filter }}{{ if eq . $content.Group }}ons-checkbox__other--open{{end}}{{end}}{{end}}" id="group-{{ $index }}-other-wrap">
+                                    <span class="ons-checkbox__other" id="group-{{ $index }}-other-wrap">
                                         <fieldset class="ons-fieldset ons-js-other-fieldset">
-                                            {{ range $contentIndex, $content := $category.ContentTypes }}
+                                            {{range $index, $childFilter := $topFilter.Types}}
+                                                {{$id := index $childFilter.FilterKey 0}}
                                                 <div class="ons-checkboxes__items">
-                                                <span class="ons-checkboxes__item ons-checkboxes__item--no-border">
-                                                    <span class="ons-checkbox ons-checkbox--no-border child-filter">
-                                                        {{ $id := (print $content.Group) }}
-                                                        <input id="{{ $id }}"
-                                                               class="js-auto-submit__input ons-checkbox__input ons-js-checkbox"
-                                                               type="checkbox" name="filter"
-                                                               {{ range $filter }}{{ if eq . $content.Group }}checked{{end}}{{end}}
-                                                               value="{{ $id }}"
-                                                        />
-                                                        <label class="ons-checkbox__label" for="{{ $id }}"
-                                                               id="{{ $id }}-label">
-                                                            {{ localise $content.LocaliseKeyName $lang 4 }} ({{ $content.Count }})
-                                                        </label>
+                                                    <span class="ons-checkboxes__item ons-checkboxes__item--no-border">
+                                                        <span class="ons-checkbox ons-checkbox--no-border child-filter">
+                                                            <input id="{{ $id }}"
+                                                                class="js-auto-submit__input ons-checkbox__input ons-js-checkbox"
+                                                                type="checkbox" name="filter"
+                                                                {{ if $childFilter.IsChecked }}checked{{end}}
+                                                                value="{{ $id }}"
+                                                            />
+                                                            <label class="ons-checkbox__label" for="{{ $id }}"
+                                                                id="{{ $id }}-label">
+                                                                {{ localise $childFilter.LocaliseKeyName $lang 4 }} ({{ $childFilter.NumberOfResults }})
+                                                            </label>
+                                                        </span>
                                                     </span>
-                                                </span>
-                                            </div>
+                                                </div>
                                             {{ end }}
                                         </fieldset>
                                     </span>
@@ -59,6 +57,7 @@
                             </span>
                     </div>
                 {{ end }}
+                <hr />
             </fieldset>
             <noscript>
                 <button type="submit"
